update: response utils
